--- a/my_project/src/app/landing/landing.component.html
+++ b/my_project/src/app/landing/landing.component.html
@@ -5,5 +5,6 @@
     <button (click)="student">student</button><br><br>
     <button (click)="studentModule()">studentModule</button><br><br>
     <button (click)="adminMod()"> Admin </button>
+    <button (click)="landing2()"> landing2</button>
 </div>
 
